# SubtitleExtractor

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.nvidia.yml  docker-compose.yml
.github/workflows/: ci.yml  release-images.yml
api/: Dockerfile  go.mod  go.sum
api/cmd/api/: main.go
api/internal/audit/: audit.go
api/internal/auth/: middleware.go  middleware_test.go  oidc.go  password.go  session.go
api/internal/cleanup/: cleanup.go
api/internal/config/: config.go
api/internal/cronspec/: cronspec.go  cronspec_test.go
api/internal/db/: db.go
api/internal/db/migrations/: 0001_init.sql  0002_workers_settings.sql  0003_double_precision.sql  0004_ocr_substitutions.sql  0005_result_name.sql  0006_video_retention.sql  0007_video_cleanup_runs.sql  0008_token_version.sql  0009_audit_log.sql  0010_worker_tokens.sql  0011_storage_quotas.sql
api/internal/events/: hub.go
api/internal/httpapi/: cleaner.go  handlers.go  handlers_admin.go  handlers_internal.go  handlers_jobs.go  handlers_sse.go  handlers_test.go  metrics.go  middleware.go  quota.go  quota_test.go  response.go  server.go
api/internal/jobs/: jobs.go
api/internal/settings/: settings.go
api/internal/storage/: local.go  s3.go  storage.go
api/internal/users/: users.go
api/internal/workers/: workers.go  workers_test.go
web/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
web/src/api/: admin.ts  auth.ts  client.ts  jobs.ts  types.ts  useJobEvents.ts
web/src/app/: CommandPalette.tsx  ProfileMenu.tsx  RootLayout.tsx
web/src/auth/: AuthContext.tsx
web/src/clientside/: _caps.ts  clientOcr.ts  normalizeFr.ts
web/src/components/: Layout.tsx  StatusBadge.tsx  StorageQuota.tsx  ui.tsx
web/src/components/ui/: ConfirmDialog.tsx  button.tsx  spinner.tsx  switch.tsx  toast.tsx  useDialog.ts
web/src/editor/: ZonePicker.tsx  ZoneSelector.tsx  decodeFrame.ts  subtitles.ts  useJassub.ts  useWaveform.ts
web/src/editor/player/: MediaStage.tsx  PlayerControls.tsx  usePlayerHotkeys.ts  useSourcePlayer.ts
web/src/lib/: format.ts  theme.ts  url.ts  zonePrefs.ts
web/src/pages/: Dashboard.tsx  Editor.tsx  JobDetail.tsx  Login.tsx
web/src/pages/admin/: AdminLayout.tsx  Settings.tsx  Substitutions.tsx  Users.tsx  Workers.tsx
web/src/routes/: Admin.tsx  Dashboard.tsx  Editor.tsx  JobDetail.tsx  Login.tsx  stubs.tsx
web/src/styles/: app.css  global.css  tokens.css
worker/: .dockerignore  .env.example  Dockerfile.nvidia  PACKAGE.md  README.md  com.subextractor.worker.plist.example  pyproject.toml  run-macos.sh  run.sh
worker/eval/: .gitignore  README.md  harness.py  report.md
worker/subextractor/: __init__.py  __main__.py  client.py  config.py  dedup.py  formats.py  normalize_fr.py  pipeline.py  runner.py  video.py
worker/subextractor/backends/: __init__.py  base.py  detector.py  paddleocr_vl.py  ppocr.py  rapidocr.py
worker/tests/: test_non_latin_ratio.py  test_normalize_fr.py  test_permanent_overlay.py  test_zone_crop_clamp.py
