[project]
name = "subextractor-worker"
version = "0.1.0"
description = "SubtitleExtractor OCR worker (hardcoded subtitle extraction)"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"

# Core dependencies (CPU / Apple Silicon friendly). The default OCR backend is
# RapidOCR (ONNX). ffmpeg must be installed on the host (e.g. `brew install ffmpeg`).
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "rapidfuzz>=3.9",
    # Unified RapidOCR package (>=2.0) with the RapidOCROutput API; needs an
    # inference engine — onnxruntime is the default, license-clean one.
    "rapidocr>=3.0",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
# Heavier PaddlePaddle-based backends (PaddleOCR 3.x). Install only if selected.
# The GPU build (paddlepaddle-gpu) is provided by the NVIDIA worker image instead.
ppocr = ["paddleocr>=3.7", "paddlepaddle>=3.0"]
# Apple-Silicon GPU OCR (PaddleOCR-VL on Metal via MLX). macOS arm64 only.
mlx = ["mlx-vlm>=0.6", "pillow>=10"]

[project.scripts]
subextractor-worker = "subextractor.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["subextractor*"]
